modified settings page, added icon, fixed some spacing

--- a/IMS/FrontEnd/src/app/Components/login/login.component.css
+++ b/IMS/FrontEnd/src/app/Components/login/login.component.css
@@ -15,3 +15,9 @@
 .loginField{
     margin:8px;
 }
+
+#loginSubmit{
+    margin-left: 40%;
+    margin-bottom: 16px;
+   
+}
