--- a/IMS/FrontEnd/src/app/Components/settings/settings.component.css
+++ b/IMS/FrontEnd/src/app/Components/settings/settings.component.css
@@ -1,3 +1,12 @@
 mat-form-field{
     margin:8px;
 }
+
+mat-card{
+    margin:60px;
+    padding: 40px;
+}
+
+mat-list-item{
+    margin:16px;
+}
